# jaws

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  default.nix  deny.toml  docker.jaws  flake.nix  go.mod  go.sum  install.sh  jaws.conf.example  justfile  shell.nix
cmd/fc/: main.go
cmd/firm/: main.go
cmd/jaws/: add.go  clean.go  cmd_test.go  commands.go  config.go  delete.go  diff.go  errors.go  flags.go  list.go  lock.go  main.go  path.go  pull.go  push.go  rollback.go  status.go  update.go  version.go
cmd/jaws/config/: config.tmpl  errors.go  parse.go  template.go
cmd/jaws/testdata/: test.conf
docs/: TROUBLESHOOTING.md  architecture.md  commands.md  configuration.md  configure.md  development.md  getting-started.md  install.md  manage-env.md  nix.md  remote-sharing.md  security.md
docs/vhs/: pull.tape  pull_edit_push.tape
integration/aws/: change.go  create.go  delete.go  pull.go  stage_manager.go
integration/gcp/: change.go  create.go  pull.go
internal/aws/: client.go  create.go  get.go  secrets-change.go  secrets-create.go  secrets-delete.go  secrets-get.go
internal/utils/: fzf.go  helpers.go
nix/: README.md  cross-build.nix  hm-module.nix  module.nix  onepassword-sdk.nix  utils.nix
pkg/: clean.go  create.go  delete.go  get.go  git-commands.go  list.go  path.go  rollback.go  set.go
pkg/envmanager/: env.go  errors.go  file.go  funcs.go  prepare.go  prepare_test.go  process.go  vars.go  write.go
pkg/envmanager/testdata/: basic-aws-config  basic-local-config  local.out
pkg/lockandload/: io.go  load.go  load_test.go  lock.go  lock_test.go  passphrase.go  prompt.go  term.go
pkg/lockandload/testdata/: load-encrypted
pkg/manager/: basic-info.go  clean.go  client.go  config.go  create.go  delete.go  download.go  errors.go  get.go  list.go  print.go  read-config.go  rollback.go  set.go
pkg/secretsmanager/: basic-info.go  basic_aws.go  basic_bws.go  basic_gcp.go  clean.go  client.go  client_aws.go  client_bws.go  client_gcp.go  config.go  config.tmpl  config.tpl  create.go  delete.go  delete_aws.go  delete_gcp.go  download.go  errors.go  gcp_test.go  get.go  iam_aws.go  interface.go  list.go  list_aws.go  list_gcp.go  manager.go  print.go  pull_aws.go  pull_bws.go  pull_gcp.go  push_aws.go  push_gcp.go  read-config.go  rollback.go  rollback_aws.go  rollback_gcp.go  set.go
pkg/secretsmanager/aws/: client.go  common.go  delete.go  iam.go  list.go  manager.go  pull.go  push.go  rollback.go
pkg/secretsmanager/bws/: client.go  common.go  list.go  manager.go  pull.go  push.go
pkg/secretsmanager/gcp/: client.go  common.go  delete.go  list.go  manager.go  pull.go  push.go  rollback.go
pkg/secretsmanger/clean/: clean.go
pkg/secretsmanger/create/: create.go
pkg/secretsmanger/delete/: delete.go
pkg/secretsmanger/get/: get.go
pkg/secretsmanger/list/: list.go
pkg/secretsmanger/rollback/: rollback.go
pkg/secretsmanger/set/: set.go
proto/: jaws.proto
scripts/: demo.sh  demo.tape  generate-docs.sh  release.sh
scripts/demo/: create.tape  log.tape  pull.tape
src/: archive.rs  cli.rs  credentials.rs  error.rs  keychain.rs  lib.rs  main.rs  secrets.rs  secrets_list.rs  vcs.rs
src/cli/: args.rs  commands.rs  mod.rs
src/client/: connection.rs  mod.rs
src/commands/: clean.rs  config_cmd.rs  connect.rs  create.rs  default.rs  delete.rs  export_import.rs  history.rs  list.rs  log.rs  mod.rs  preview.rs  pull.rs  push.rs  remote.rs  rollback.rs  save.rs  serve.rs  snapshot.rs  status.rs  sync.rs
src/commands/config_cmd/: discovery.rs  handlers.rs  helpers.rs  mod.rs
src/config/: discovery.rs  file.rs  flags.rs  loader.rs  mod.rs  types.rs
src/db/: mod.rs  models.rs  repository.rs  schema.rs
src/secrets/: aws.rs  manager.rs  migration.rs  mod.rs  onepassword.rs  onepassword_ffi.rs  providers.rs  secret.rs  secrets.rs  secrets_list.rs  storage.rs  sync.rs
src/secrets/providers/: aws.rs  bitwarden.rs  detect.rs  gcp.rs  jaws.rs  mod.rs  select.rs  vault.rs
src/secrets/providers/onepassword/: cli.rs  client.rs  ffi.rs  mod.rs
src/server/: auth.rs  enrollment.rs  mod.rs  pki.rs  service.rs
src/utils/: editor.rs  error.rs  mod.rs  parsing.rs  permissions.rs
tests/: config_hcl_test.rs  integration_test.rs  test_pull_inject.rs  test_push_workflow.rs  test_save_workflow.rs
utils/: diff.go  git.go  git_test.go  helpers.go  local_list.go  path.go  template.go
utils/fzf/: fzf.go
utils/helpers/: git.go  helpers.go  path.go  template.go
utils/style/: colors.go  colors_test.go
utils/tui/: delegate.go  input.go  selector.go  selector_test.go  simple_selector.go
