[package]
name = "jaws"
version = "1.3.1"
edition = "2024"
description = "A CLI tool and library for managing secrets from multiple providers"
license = "MPL-2.0"

[lib]
name = "jaws"
path = "src/lib.rs"

[[bin]]
name = "jaws"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.88.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
ff = { git = "https://github.com/jacbart/ff.git", branch = "main" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
dirs = "5"
futures = "0.3"
serde_json = "1"
libloading = "0.8"
knuffel = { version = "3.2.0", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
age = { version = "0.11", features = ["ssh"] }
tar = "0.4"
rpassword = "7.4.0"
chrono-humanize = "0.2.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
bitwarden = { version = "2.0.0", features = ["secrets"] }
rustls = { version = "0.23", features = ["ring"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# Optional vendored OpenSSL for cross-compilation
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
# Enable vendored OpenSSL for cross-compilation builds
# This compiles OpenSSL from source instead of linking against system libraries
vendored-openssl = ["openssl"]
